# surrealdb-lttb

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  lttb-object.surql  lttb.js  main.py  motion-table-flexible.surql  motion-table.surql  query-flexible-lttb.surql  query-flexible.surql  requirements.txt  run-lttb-object.js  run-test.sh
scripts/: start-test-db
src/: lib.rs
surql/: full-example.surql  lttb-fields.surql  lttb.surql
